--- a/src/main/resources/model-comparison.properties
+++ b/src/main/resources/model-comparison.properties
@@ -1,3 +1,6 @@
 # Format: RequestClass=ResponseClass:field1=field1Response,field2=field2Response
 
 CreateUserRequest=CreateUserResponse:username=username,role=role
+ChangeNameRequestModel=Customer:name=name
+MakeDepositRequestModel=AccountResponseModel:id=id
+TransferMoneyRequestModel=TransferMoneyResponseModel:senderAccountId=senderAccountId,receiverAccountId=receiverAccountId
